Creacion y consulta de estudios

--- a/Concretos/appsettings.json
+++ b/Concretos/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=LAPTOP-AL7DN3UR\\SQLEXPRESS;Database=Concretos;Trusted_Connection=SSPI;MultipleActiveResultSets=true;Trust Server Certificate=true"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-38631D5N\\SQLEXPRESS;Database=QualitySolidDb;Trusted_Connection=true;Trust Server Certificate=true"
+  }
 }
