Se guarda usuario en el localStorage
* Al iniciar sesión, si pasa el parámetro user_id por get, se guarda
  este parámetro en el localStorage.

* Se crea campo de tipo hidden en creación de estudios para guardar el
  user id.

* Se habilita la posibilidad de null al objeto User en el modelo User
  (Cambio temporal) para que se puedan gudar los estudios.

--- a/Concretos/appsettings.json
+++ b/Concretos/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=LAPTOP-AL7DN3UR\\SQLEXPRESS;Database=Concretos;Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=true"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=Concretos;Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=true"
+  }
 }
